kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/zigbee2mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  labels:
    app.kubernetes.io/name: zigbee2mqtt
spec:
  selector:
    app.kubernetes.io/name: zigbee2mqtt
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
