kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/zigbee2mqtt/routes.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: zigbee2mqtt-oidc
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: zigbee2mqtt-https
  oidc:
    provider:
      issuer: https://auth.w7x6t.dev/oauth2/openid/zigbee2mqtt
    clientID: zigbee2mqtt
    clientSecret:
      name: zigbee2mqtt-oidc-client-credentials
    redirectURL: "https://zigbee2mqtt.tk831.net/oauth2/callback"
    logoutPath: "/oauth2/logout"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt-http
spec:
  parentRefs:
  - name: default
    namespace: kube-system
    sectionName: http
  hostnames: [zigbee2mqtt.tk831.net]
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt-https
spec:
  parentRefs:
  - name: default
    namespace: kube-system
    sectionName: https
  hostnames: [zigbee2mqtt.tk831.net]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: zigbee2mqtt
      port: 80
